platform/woodpecker/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: woodpecker
  namespace: woodpecker
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  parentRefs:
  - name: public-gateway
    namespace: kube-system
    sectionName: https
  hostnames:
  - ci.lajas.tech
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: woodpecker-server
      port: 80
